--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,83 @@
 
-#matthew {
-    height: 150px;
+@import url("https://fonts.googleapis.com/css?family=Permanent+Marker|Architects+Daughter|Cinzel|Frank+Ruhl+Libre");
+:root {
+    --heading-font: 'Permanent Marker', cursive;
+    --subheading-font: 'Architects Daughter', cursive;
 }
+@media (min-width: 800px) {
+    nav {
+        padding: .5em;
+    }
+    main h2 {
+        padding-top: em;
+    }
+    body {
+        width: 600px;
+        margin: 0 auto;
+        background-color: #f5e2c8;
+        color:#3b1f5b;
+    } 
+}
+#pheader {
+    background-color:#3b1f5b;
+    color:#f5e2c8;
+    border-radius: 15px;
+    padding: 1.2em;
+    text-align: center;
+    display: block;
+    margin-top: 15%;
+    font-family: var(--heading-font)
+}
+#subheader{
+    color:#3b1f5b;
+    padding-left: 20px;
+    font-family: var(--subheading-font);
+}
+nav ul li {
+    color:#3b1f5b;
+    padding-bottom: 5px;
+ }
+.assignments:visited {
+    color: #3b1f5b;
+}
+.assignments:hover {
+    color: #f861b2;
+}
+.assignments {
+    color: blue;
+}
+#matthew {
+    height: 210px;
+    width: auto;
+    box-shadow: 4px 8px 20px rgba(0,0,0,1);
+    float: right;
+    border-radius: 10px;
+    margin-right: 25px;
+    margin-top: 40px;
+}
+
+footer {
+    font-size: 0.8em;
+    text-align: center;
+    background-color: #3b1f5b;
+    padding: .8em;
+    border-radius: 15px;
+    color: #f5e2c8;
+    vertical-align: middle;
+}
+#slink:visited {
+    color:#f5e2c8;
+}
+#slink {
+    color:#f5e2c8;
+}
+#slink:hover {
+    color:aquamarine;
+}
+#modified {
+    font-size: 0.7em;
+    text-align: center;
+    color: #f861b2;
+    vertical-align: middle;
+}
+
