updated css and errors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,6 @@
 
 @import url("https://fonts.googleapis.com/css?family=Permanent+Marker|Architects+Daughter|Cinzel|Frank+Ruhl+Libre");
-:root {
-    --heading-font: 'Permanent Marker', cursive;
-    --subheading-font: 'Architects Daughter', cursive;
-}
+
 @media (min-width: 800px) {
     nav {
         padding: .5em;
@@ -12,7 +9,7 @@
         padding-top: em;
     }
     body {
-        width: 600px;
+        width: 800px;
         margin: 0 auto;
         background-color: #f5e2c8;
         color:#3b1f5b;
@@ -26,12 +23,12 @@
     text-align: center;
     display: block;
     margin-top: 15%;
-    font-family: var(--heading-font)
+    font-family: 'Permanent Marker', cursive;
 }
 #subheader{
     color:#3b1f5b;
     padding-left: 20px;
-    font-family: var(--subheading-font);
+    font-family: 'Architects Daughter', cursive;
 }
 nav ul li {
     color:#3b1f5b;
@@ -51,8 +48,8 @@ nav ul li {
     width: auto;
     box-shadow: 4px 8px 20px rgba(0,0,0,1);
     float: right;
-    border-radius: 10px;
-    margin-right: 25px;
+    border-radius: 15px;
+    margin-right: 55px;
     margin-top: 40px;
 }
 
