fixed em problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
         padding: .5em;
     }
     main h2 {
-        padding-top: em;
+        padding-top: .5em;
     }
     body {
         width: 800px;
