--- a/assets/css/small.css
+++ b/assets/css/small.css
@@ -51,8 +51,8 @@ nav ul li {
     font-family: 'Merriweather', serif;
 }
 #matthew {
-    height: 210px;
-    width: auto;
+    height: auto;
+    width: 210px;
 }
 
 footer {
