modified margins on portal

--- a/assets/css/small.css
+++ b/assets/css/small.css
@@ -28,7 +28,7 @@ header {
     padding: 1.2em;
     text-align: center;
     display: block;
-    margin-top: 15%;
+    margin-top: 0;
     font-family: 'Permanent Marker', cursive;
 }
 #subheader{
