--- a/assets/css/small.css
+++ b/assets/css/small.css
@@ -1,5 +1,7 @@
 
-
+* { -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box; box-sizing:
+    border-box;}
 
 h1 {
     font-size: 1.5rem;
