--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -37,10 +37,11 @@ header h2 {
 /* Navigation rules here */
 
 /* main rules here */
-#main-grid {
+.main-grid {
     display: grid;
     grid-template-columns: 1fr;
     column-span: 1;
+    margin: 0 auto;
 }
 .item {
     max-width: 400px;
