--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -31,7 +31,7 @@ header h2 {
 
 /* nav rules here */
 nav {
-    background-color: #219ebc;
+    background-color: #8ecae6;
     text-align: center;
 }
 nav ul {
