--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -15,7 +15,7 @@
         margin: auto;
     }
     main h1, h2, h3, p {
-        text-align: justify;
+        text-align: left;
         margin: 2%;
     }
 }
