--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -1,5 +1,8 @@
 @media only screen and (min-width: 600px) {
 
+    .promotion {
+        font-size: 1.5em;
+    }
     nav button {
         display: none;
     }
