--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -23,6 +23,12 @@ p {
     margin: 0 auto;
 }
 /* header rules here */
+.promotion {
+    background-color: #ffbf1f;
+    color: #023047;
+    text-align: center;
+    text-size: 1.2em;
+}
 header {
     padding: .5rem 2%;
 }
