adjucted font size

--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -27,7 +27,7 @@ p {
     background-color: #ffbf1f;
     color: #023047;
     text-align: center;
-    text-size: 1.2em;
+    font-size: 1.1em;
 }
 header {
     padding: .5rem 2%;
