--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -164,8 +164,15 @@ nav button {
     grid-column: 1/3;
     width: 100%;
 }
-
-
+.article {
+    display: inline;
+}
+.top {
+    display: none;
+}
+.bottom {
+    width: 100%;
+}
 
 .placeholder {
     border: 2px dashed #000;
