--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -145,6 +145,19 @@ nav button {
     font-weight: 500;
     line-height: .2;
 }
+.w_icon {
+    width: 60px;
+}
+.w_box {
+    border: 1px solid #023047;
+    width: 100px;
+    height: 175px;
+    text-align: center;
+}
+.forecast {
+    display: none;
+}
+
 .contact_us h2 {
     margin: 0;
     margin-top: 10px;
