--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -45,6 +45,13 @@
     .label_data {
         line-height: .7;
     }
+    .forecast {
+        display: block;
+    }
+    .w_forecast {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
     .contact_us h2 {
         margin: 0;
         margin-top: 10px;
