--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -152,6 +152,7 @@ nav button {
     width: 100px;
     height: 175px;
     text-align: center;
+    background-color: #8ecae6;
 }
 .forecast {
     display: none;
