--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -58,7 +58,7 @@
     }
     .contact_whole {
         display: grid;
-        grid-column: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         margin: 2%;
     }
     .address {
