--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -164,7 +164,7 @@ nav button {
 }
 .contact_whole {
     display: grid;
-    grid-column: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     margin: 2%;
     grid-gap: 1rem;
 }
