adjusted padding and grid alignment

--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -23,6 +23,9 @@
         top: 60px;
         left: 90px;
     }
+    .w_forecast {
+        gap: 60px;
+    }
     .maxSize {
         max-width: 64rem;
     }
