--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -4,6 +4,7 @@ header, footer {
     color: #219ebc;
     padding: 1rem 2%;
 }
+
 h1, h2, h3 {
     font-family: 'Patua One', cursive;
 }
@@ -97,9 +98,13 @@ nav button {
     font-size: 2rem;
     width: 100%;
     text-align: left;
+    padding-left: 10px;
 }
 
 /* main rules here */
+main h1, h2, h3, p {
+    padding-left: 10px;
+}
 .hero_summary {
     position: relative;
 }
@@ -148,8 +153,8 @@ nav button {
     width: 60px;
 }
 .w_box {
-    border: 1px solid #023047;
-    width: 100px;
+    border: 2px solid #023047;
+    width: 110px;
     height: 175px;
     text-align: center;
     background-color: #8ecae6;
