added gallery to weathersite folder

--- a/weathersite/css/medium.css
+++ b/weathersite/css/medium.css
@@ -105,4 +105,8 @@
     .maxSize {
         max-width: 44rem;
     }
+    /*Gallery only*/
+    .gallery {
+    grid-template-columns: 1fr 1fr;
+    }
 }
