--- a/weathersite/css/large.css
+++ b/weathersite/css/large.css
@@ -42,7 +42,10 @@
     .gallery figure:hover {
         box-shadow: 0 0 75px #000;
     }
-
+    form label.sbs {
+        padding: .4rem 0;
+    }
+    
 
 
 
