--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -66,10 +66,10 @@ img {
     grid-row: 1/3;
     padding: 5px;
     margin-top: 10px;
-    font-size: 1.1em;
+    font-size: 0.9em;
     width: 144px;
     text-align: left;
-
+    white-space: pre;
 }
 
 footer {
