--- a/weathersite/css/medium.css
+++ b/weathersite/css/medium.css
@@ -99,6 +99,13 @@
         padding-left: 10px;
         padding-bottom: 10px;
     }
+    .topl {
+        display: block;
+        width: auto;
+        float: left;
+        padding-right: 10px;
+        padding-bottom: 10px;
+    }
     .bottom {
         display: none;
     }
