--- a/weathersite/css/large.css
+++ b/weathersite/css/large.css
@@ -45,9 +45,16 @@
     form label.sbs {
         padding: .4rem 0;
     }
-    
-
-
-
+    /*home*/
+    .cards {
+        max-width: 64rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .cards section {
+        display: block;
+        max-width: 300px;
+    }
+   
 }
 
