--- a/weathersite/css/medium.css
+++ b/weathersite/css/medium.css
@@ -129,4 +129,36 @@
     .slider{
        max-width: 28rem;
     }
+    /*home*/
+   
+    .cards section {
+        display: grid;
+        grid-template-columns: 1fr 1fr; 
+        max-width: 44rem;
+    }
+    .title {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .details {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .card-image {
+        grid-column: 2/3;
+        grid-row: 1/3;
+    }
+
+    .cards section:nth-child(odd) .title {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    .cards section:nth-child(odd) .details {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    .cards section:nth-child(odd) .card-image {
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
 }
