added event json

--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -23,6 +23,9 @@
         top: 60px;
         left: 90px;
     }
+    .upcoming {
+        max-width: 60%;
+    }
     .w_forecast {
         gap: 60px;
     }
