--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -153,6 +153,25 @@ main h1, h2, h3, h4, p {
     font-weight: 500;
     line-height: .2;
 }
+.upcoming {
+    border: 2px solid #023047; 
+    width: 80%;
+    background-color:#8ecae6;
+    margin: 6% auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.upcoming h3 {
+    border-bottom: 2px solid #023047;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.5em;
+    margin: 0;
+}
+.upcoming p {
+    text-align: center;
+    font-size: 1.2em;
+}
 .w_icon {
     width: 60px;
 }
