--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -3,6 +3,7 @@ header {
     background-color: #2689ad;
     color: #ffffff;
     padding: .5rem 2%;
+   
 }
 
 h1, h2, h3, h4, h5 {
@@ -13,6 +14,8 @@ p {
 }
 .fullHeader {
     display: flex;
+    margin: 0 auto;
+    max-width: 20rem;
 }
 .headerLogo {
     width: 70px;
@@ -47,6 +50,7 @@ header button {
 nav {
     background-color: #2689ad;
     margin: 0;
+    font-weight: bold;
 }
 nav ul {
     list-style-type: none;
@@ -65,7 +69,7 @@ nav a:hover {
     color: #000000;
 }
 .active {
-    color: #6bd8ff;
+    color: #000000;
     background-color: #ad6415;
 }
 /*footer*/
@@ -78,9 +82,8 @@ footer .footerData {
     display: grid;
     grid-template-columns:  1fr 250px 80px 1fr;
     grid-template-rows: 1fr 1fr;
-
 }
-footer p, footer h3, footer h4 {
+footer p, footer h2, footer h4 {
     font-size: 0.8em;
 }
 footer .contact {
@@ -95,7 +98,9 @@ footer .info {
     grid-column: 1/5;
     grid-row: 2/3;
 }
-
+.info .last {
+    color: #6bd8ff;
+}
 
 /*hide property*/
 .disabled {
