--- a/chamberofunity/css/medium.css
+++ b/chamberofunity/css/medium.css
@@ -61,9 +61,10 @@
     }
     footer .socialIcons {
         grid-column: 3/4;
-        width: 200px;
-        margin-left: 100px;
-        margin-top: 100px;
+        width: 300px;
+        margin-left: 95px;
+        margin-top: 95px;
+        display: flex;
     }
     footer .info {
         text-align: center;
@@ -81,5 +82,8 @@
     .method {
         grid-column: 1/2;
         grid-row: 1/2;
+    }
+    .social {
+        display: block;
     }
 }
