--- a/chamberofunity/css/large.css
+++ b/chamberofunity/css/large.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width: 1024px) {
     .headerLogo {
-        width: 100px;
+        width: 110px;
+        padding-top: 1px;
     }
     .headerTitles h1 {
         font-size: 2rem;
