--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -126,7 +126,27 @@ main {
     display: block;
     width: 100%;
 }
-
+.purpose {
+    border: 2px solid #000000; 
+    width: 18rem;
+    background-color:#6bd8ff;
+    margin: 8px auto;
+    position: absolute;
+    top: -1px;
+    right: 10px;
+    opacity: .8;
+}
+.purpose h3 {
+    border-bottom: 1px solid #000000;
+    margin: 5px auto;
+    text-align: center;
+}
+.purpose p {
+    margin: 5px auto;
+    text-align: center;
+    font-size: 0.8em;
+    opacity: 1;
+}
 
 
 
