--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -158,7 +158,40 @@ main {
 .purpose button:hover {
     color: #000000;
     background-color: #ad6415;
-
+}
+.weather {
+    display: grid;
+    border: 2px solid #000000; 
+    width: 18rem;
+    background-color:#6bd8ff;
+    margin: 8px auto;
+}
+.currentWeather {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.currentWeather  h3 {
+    border-bottom: 2px solid #000000;
+    grid-column: 1/3;
+    margin: 5px auto;
+    text-align: center;
+}
+.labels {
+    grid-column: 1/2;
+    margin: 0;
+    text-align: right;
+    font-weight: 600;
+    line-height: .2;
+}
+.labelsData {
+    grid-column: 2/3;
+    margin: 0;
+    text-align: left;
+    padding-left: 5px;
+    font-weight: 500;
+    line-height: .2;
 }
 
 /*hide property*/
