--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -160,10 +160,8 @@ main {
     background-color: #ad6415;
 }
 .weather {
-    display: grid;
-    border: 2px solid #000000; 
+    padding-top: 20px;
     width: 18rem;
-    background-color:#6bd8ff;
     margin: 8px auto;
 }
 .currentWeather {
@@ -171,6 +169,8 @@ main {
     grid-template-columns: 1fr 1fr;
     grid-column: 1/3;
     grid-row: 1/2;
+    background-color: #6bd8ff;
+    border: 1px solid #000000;
 }
 .currentWeather  h3 {
     border-bottom: 2px solid #000000;
@@ -193,7 +193,27 @@ main {
     font-weight: 500;
     line-height: .2;
 }
+.threedayForecast {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 35px 1fr 1fr 1fr;
+    gap: 10px;
+    grid-column: 1/3;
+    padding-top: 10px;
+    
+}
+.threedayForecast  h3 {
+    border-bottom: 2px solid #000000;
+    grid-column: 1/2;
+    margin: 5px auto;
+    text-align: center;
+}
 
+.threedayForecast .w_box {
+    text-align: center;
+    border: 1px solid #000000;
+    background-color: #6bd8ff;
+}
 /*hide property*/
 .disabled {
     display: none;
