--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -15,11 +15,12 @@ p {
 .fullHeader {
     display: flex;
     margin: 0 auto;
-    max-width: 20rem;
+    max-width: 24rem;
 }
 .headerLogo {
-    width: 70px;
+    width: 75px;
     margin-left: 5px;
+    padding-right: 20px
 }
 .headerTitles {
     flex-direction: column;
