--- a/chamberofunity/css/large.css
+++ b/chamberofunity/css/large.css
@@ -13,6 +13,13 @@
     nav ul li {
         font-size: 1.2rem;
     }
+    
+    
+    
+    .threedayForecast {
+        grid-row: 1/2;
+        grid-column: 2/4;
+    }
 
 
 
