--- a/chamberofunity/css/medium.css
+++ b/chamberofunity/css/medium.css
@@ -104,4 +104,31 @@
         height: 50px;
         font-size: 1.5em;
     }
+    .weather {
+        max-width: 50rem;
+        align-items: center;
+        justify-content: center;
+        margin: 0 2%;
+        display : grid;
+        grid-template-columns: 1fr 1fr;
+        width: auto;
+        gap: 15px;
+    }
+    .currentWeather {
+        width: 300px;
+    }
+    
+    .threedayForecast {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 35px 1fr;
+        grid-row: 2/3;
+        grid-column: 1/3;
+    }
+    .threedayForecast  h3 {
+        grid-column: 1/4;
+    }
+    
+    .threedayForecast .w_box {
+        width: 150px;
+    }
 }
