--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -209,11 +209,33 @@ main {
     margin: 5px auto;
     text-align: center;
 }
-
 .threedayForecast .w_box {
     text-align: center;
     border: 1px solid #000000;
     background-color: #6bd8ff;
+}
+.alert {
+    background-color: red;
+    color: #ffffff;
+    text-align: center;
+    max-width: 64rem;
+    margin: 0 auto;
+}
+.alert h1{
+    margin: 0;
+    padding: 20px;
+}
+.alert p{
+    margin: 0;
+    padding-bottom: 10px;;
+}
+.alert button {
+    background-color: #ffffff;
+    color: red;
+    border: 2px solid red;
+    display: block;
+    width: 100%;
+    padding: 10px;
 }
 /*hide property*/
 .disabled {
