--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -215,7 +215,7 @@ main {
     background-color: #6bd8ff;
 }
 .alert {
-    background-color: red;
+    background-color: darkred;
     color: #ffffff;
     text-align: center;
     max-width: 64rem;
