--- a/chamberofunity/css/medium.css
+++ b/chamberofunity/css/medium.css
@@ -38,6 +38,7 @@
         width: 25%;
         flex: 1 1 100%;
         font-size: 1rem;
+        border-right: 1px solid #000000;
     }
     /*footer*/
     footer {
