--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -109,7 +109,6 @@ footer .info {
 /*main home*/
 main {
     max-width: 67.5rem;
-
     margin: 0 auto;
 }
 .hero {
@@ -213,6 +212,9 @@ main {
     border: 1px solid #000000;
     background-color: #6bd8ff;
 }
+.threedayForecast img {
+    width: 75px;
+}
 .alert {
     background-color: darkred;
     color: #ffffff;
@@ -248,6 +250,12 @@ main {
 .ads {
     width: 300px;
 }
+/*athens page*/
+.athens {
+    margin: 8px;
+}
+
+
 /*hide property*/
 .disabled {
     display: none;
