--- a/chamberofunity/css/medium.css
+++ b/chamberofunity/css/medium.css
@@ -94,6 +94,9 @@
         top: 50px;
         right: 30px;
         opacity: 0.9;
+        border: 2px solid #000000; 
+        background-color:#6bd8ff;
+        position: absolute;
     }
     .purpose h3 {
         font-size: 1.5em;
