--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -259,6 +259,97 @@ main {
 .athens figure figcaption {
     text-align: center;
 }
+/*Join page*/
+form {
+    max-width: 24rem;
+    margin: 2% auto;
+}
+form label.ftop input:required {
+    border-left: red solid 6px;
+}
+form label.ftop input:required:valid {
+    border-left: green solid 6px;
+}
+form fieldset {
+    margin: 2rem auto;
+    margin-left: 10px;
+    border: #000000 1px solid;
+    background-color: #2689ad;
+    border-radius: 10px;
+    padding: .5rem 2%;
+    max-width: 21rem;
+}
+form legend {
+    color: #ffffff;
+    background-color: #ad6415;
+    border-radius: 7px;
+    margin: 0 1rem;
+    padding: 5px 20px 5px 20px;;
+    font-size: 1.7em;
+}
+form label.ftop, form div {
+    display: block;
+    padding-top: 1rem;
+    color: #ffffff;
+    font-weight: 600;
+    font-size: 1rem;
+}
+form label.ftop input, form label.ftop select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #000000;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #000000;
+    width: 100%;
+    max-width: 19rem;
+    
+}
+form label.sbs {
+    display: block;
+    padding: .75rem 0;
+    font-weight: 600;
+    color: #ffffff;
+}
+form textarea {
+    width:  90%;
+    height: 250px;
+    display: block;
+    border: #000000 solid 1px;
+    max-width: 19rem;
+}
+form input.submitBtn {
+    border: none;
+    border-radius: 5px;;
+    background-color: #ad6415;
+    color: #ffffff;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 100%;
+    max-width: 22rem;
+    font-size: 1.7em;
+}
+form input.submitBtn:hover {
+    background-color: #2689ad;
+    color: #ffffff;
+    border: #000000 2pt solid;
+    cursor: pointer;
+}
+table {
+    text-align: center;
+    color: #ffffff;
+}
+table, th, td {    
+    border: 1px solid rgb(180, 180, 180);
+    border-collapse: collapse;
+    width: auto;
+    padding: 5px; 
+}
+.joinpurpose {
+    text-align: left;
+    padding: 10px;
+}
 /*hide property*/
 .disabled {
     display: none;
