--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -190,7 +190,7 @@ main {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 35px 1fr 1fr 1fr;
-    gap: 10px;
+    grid-gap: 10px;
     grid-column: 1/3;
     padding-top: 10px;
     
@@ -349,6 +349,24 @@ table, th, td {
 .joinpurpose {
     text-align: left;
     padding: 10px;
+}
+/*directory page*/
+.directoryGrid {
+    margin: 4%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+}
+.directoryGrid section {
+    border:  1px solid #000000;
+    padding: 15px;
+    text-align: center;
+    width: 300px;
+    color: #ffffff;
+    background-color: #ad6415;
+}
+.directoryGrid section:nth-child(odd) {
+    background-color: #2689ad;
 }
 /*hide property*/
 .disabled {
