--- a/chamberofunity/css/small.css
+++ b/chamberofunity/css/small.css
@@ -368,6 +368,23 @@ table, th, td {
 .directoryGrid section:nth-child(odd) {
     background-color: #2689ad;
 }
+.buttoncontainer {
+    margin: 2% 60% auto;
+    width: 100px;
+    height: 55px;
+    background-color: #2689ad;
+    text-align: center;
+    border: 1px solid #000000;
+    display: none;
+}
+.display {
+    width: 40px;
+    height: 40px;
+    margin: 2%;
+    padding-top: 5px;
+   
+}
+
 /*hide property*/
 .disabled {
     display: none;
