--- a/chamberofunity/css/medium.css
+++ b/chamberofunity/css/medium.css
@@ -179,4 +179,19 @@
         display: block;
         margin-left: 80%;
     }
+    .googlemap {
+        height: 250px;
+        grid-column: 1/3;
+    }
+    .contactPage {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .pageContact {
+        grid-column: 1/3;
+    }
+    .board {
+        margin-top: 50px;
+        padding-left: 10px;
+    }
 }
