--- a/chamberofunity/css/medium.css
+++ b/chamberofunity/css/medium.css
@@ -46,6 +46,7 @@
         align-items: center;
         justify-content: center;
         margin: 0 auto;
+        height: 300px;
     }
     footer .footerData {
         display: grid;
