added css notes

--- a/wdd330/assets/css/notes.css
+++ b/wdd330/assets/css/notes.css
@@ -1,3 +1,5 @@
+/* adds basic stylnig option for notes asignments
+additional styling may be added over time */
 body {
     margin: auto 0;
     text-align: center;
