--- a/wdd330/assets/css/notes.css
+++ b/wdd330/assets/css/notes.css
@@ -4,9 +4,8 @@ body {
     margin: auto 0;
     text-align: center;
 }
-main {
-    margin: auto 0;
-    max-width: 680px;
+ul {
+    align-items: center;
 }
 li {
     text-align: left;
