--- a/wdd330/week06/style.css
+++ b/wdd330/week06/style.css
@@ -196,6 +196,10 @@ main {
     color: white;
 }
 
+.hidden {
+    display: none;
+}
+
 @media screen and (min-width: 600px) {
     body {
         background-color: #6A4E73;
