--- a/wdd330/assets/css/notes.css
+++ b/wdd330/assets/css/notes.css
@@ -10,3 +10,16 @@ ul {
 li {
     text-align: left;
 }
+.ad4 {
+    position: relative;
+}
+
+.no-geolocation .ad4 {
+    display: none;
+}
+
+.ad4 h1 {
+    font-size: 20px;
+    font-family: AcknowledgementMedium;
+    text-align: center;
+}
