--- a/wdd330/pokedex/pokedex.css
+++ b/wdd330/pokedex/pokedex.css
@@ -13,6 +13,7 @@ p {
 header {
     background-color: crimson;
     padding-bottom: 5px;
+    border-bottom: black solid 2px;
 }
 header h1,header h2,header p {
     margin: 0;
@@ -46,20 +47,160 @@ header p {
     background-color: black;
     border: 1px white solid;
     padding: 14px;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 #allBtn{
+    padding-left: 22px;
+    padding-right: 22px;
+}
+ul {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 250px 1fr;
+}
+
+.card {
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: 50px 50px 50px 50px 50px;
+    grid-template-rows: 50px 50px 50px 50px 50px;
+    border: black solid 2px;
+    border-radius: 50%;
+    height:250px;
+    width: 250px;
+    font-weight: 600;
+    margin: 0;
+    margin-bottom: 10px;
+    justify-content: center;
+    
+}
+.card .typeOne {
+    grid-column: 2/3;
+    grid-row: 5/6;
+    justify-self: left;
+    height: 23.4px;
+    width: 62.4px;
+}
+.card .typeTwo {
+    grid-column: 4/5;
+    grid-row: 5/6;
+    justify-self: right;
+    height: 23.4px;
+    width: 62.4px;
+}
+.card .sprites {
+    grid-column: 2/4;
+    grid-row: 2/4;
+    padding-top: 20px;
+    height: auto;
+    width: 140px;
+}
+.card input[type="checkbox"] {
+    opacity: 0;
+    z-index: 1;
+}
+.card .checkOne {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    justify-self: left;
+    height: 50px;
+    width: 50px;
+}
+.card .checkOne[type="checkbox"] + .ball_icon {
+    filter: grayscale(100%);
+}
+.card .checkOne[type="checkbox"]:checked + .ball_icon {
+    filter: grayscale(0%);
+}
+.ball_icon {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    justify-self: left;
+    height: auto;
+    width: 60px;
+    border-radius: 50%;
+}
+
+.card .checkTwo {
+    grid-column: 4/6;
+    grid-row: 3/4;
+    justify-self: right;
+    height: 50px;
+    width: 50px;
+}
+.card .checkTwo[type="checkbox"] + .shiny_icon {
+    filter: grayscale(100%);
+}
+.card .checkTwo[type="checkbox"]:checked + .shiny_icon {
+    filter: grayscale(0%);
+}
+
+.shiny_icon {
+    grid-column: 4/6;
+    grid-row: 2/5;
+    justify-self: right;
+    align-self: center;
+    height: auto;
+    width :80px;
+    border-radius: 50%;
+}
+
+.card h2 {
+    text-align: center;
+    grid-column: 2/4;
+    grid-row: 1/3;
+    font-size: 0.8em;
+    padding-top: 35px;
     padding-left: 20px;
-    padding-right: 20px;
-}
-.type {
-    height: 18px;
-    width: 48px;
 }
 
 
-.collected {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: crimson;
+    padding-bottom: 5px;
+    border-top: black solid 2px;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+    align-items: center;
+    width: auto;
     display: flex;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-.uncollected {
-    display: flex;
+footer button {
+    font-family: 'Fuzzy Bubbles', cursive;
+    display: block;
+    color: white;
+    font-size: .8em;
+    background-color: black;
+    border: 1px white solid;
+    padding: 20px;
+}
+#prev {
+    margin-right: 15%;
+    padding-right: 40px;
+    padding-left: 40px;
+}
+#next {
+    margin-left: 15%;
+    padding-right: 40px;
+    padding-left: 40px;
 }
