--- a/wdd330/pokedex/pokedex.css
+++ b/wdd330/pokedex/pokedex.css
@@ -90,11 +90,13 @@ ul {
     width: 62.4px;
 }
 .card .sprites {
-    grid-column: 2/4;
-    grid-row: 2/4;
+    grid-column: 2/5;
+    grid-row: 2/5;
+    justify-self: center;
+    align-self: center;
     padding-top: 20px;
     height: auto;
-    width: 140px;
+    width: 100px;
 }
 .card input[type="checkbox"] {
     opacity: 0;
@@ -148,11 +150,11 @@ ul {
 
 .card h2 {
     text-align: center;
-    grid-column: 2/4;
+    grid-column: 2/5;
     grid-row: 1/3;
-    font-size: 0.8em;
-    padding-top: 35px;
-    padding-left: 20px;
+    font-size: 0.6em;
+    padding-top: 20px;
+    
 }
 
 
