--- a/wdd330/pokedex/pokedex.css
+++ b/wdd330/pokedex/pokedex.css
@@ -55,6 +55,9 @@ header p {
     padding-right: 22px;
 }
 main {
+    background-color: rgba(54, 52, 52, 0.904);
+    border-top: white 2px solid;
+    border-bottom: white 2px solid;
     display: grid;
     grid-template-columns: 1fr 250px 1fr;
 }
@@ -70,7 +73,7 @@ ul {
     grid-template-columns: 50px 50px 50px 50px 50px;
     grid-template-rows: 50px 50px 50px 50px 50px;
     border: crimson solid 1px;
-    background-color: gray;
+    background-color: lightslategray;
     border-radius: 50%;
     height:250px;
     width: 250px;
@@ -162,17 +165,22 @@ ul {
     text-align: center;
     grid-column: 2/5;
     grid-row: 1/2;
-    font-size: 0.6em;
+    font-size: .8em;
     padding-top: 0px;
-    
+    text-shadow: black  2px 2px;
+    color: white;
+    font-family: 'Fuzzy Bubbles', cursive;
 }
 .card h2 {
     text-align: center;
     grid-column: 2/5;
     grid-row: 1/3;
-    font-size: 0.6em;
+    font-size: 0.9em;
     padding-top: 20px;
+    text-shadow: black  2px 2px;
+    color: white;
     
+    font-family: 'Fuzzy Bubbles', cursive;
 }
 .card .caught {
     grid-column: 2/5;
@@ -201,24 +209,6 @@ ul {
     grid-row: 4/6;
     justify-self: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 footer {
     background-color: crimson;
     padding-bottom: 5px;
@@ -252,3 +242,45 @@ footer button {
     padding-right: 40px;
     padding-left: 40px;
 }
+@media only screen and (min-width: 600px) {
+    main {
+        grid-template-columns: 1fr 1fr;
+    }
+    ul {
+        grid-column: 1/3;
+        columns: 2;
+    }
+    .card {
+        margin: auto;
+        margin-bottom: 20px;
+    }
+    header h1 {
+        font-size: 4.5em;
+        padding-top: 50px;
+        padding-bottom: 10px;
+    } 
+    header p {
+        font-size: 1em;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        
+    } 
+}
+@media only screen and (min-width: 900px) {
+    main {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    ul {
+        grid-column: 1/4;
+        columns: 3;
+    }
+    footer {
+        padding: 30px;
+    }
+    .dex_header button {
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 20px;
+    }
+}
+
