--- a/wdd330/pokedex/pokedex.css
+++ b/wdd330/pokedex/pokedex.css
@@ -72,15 +72,14 @@ ul {
     display: grid;
     grid-template-columns: 50px 50px 50px 50px 50px;
     grid-template-rows: 50px 50px 50px 50px 50px;
-    border: crimson solid 1px;
+    border: black solid 1px;
     background-color: lightslategray;
     border-radius: 50%;
     height:250px;
     width: 250px;
     font-weight: 600;
-    margin: 0;
-    margin-bottom: 10px;
     justify-content: center;
+    align-self: center;
     
 }
 .card .typeOne {
@@ -265,6 +264,9 @@ footer button {
         padding-bottom: 20px;
         
     } 
+    footer button {
+        font-size: 1em;;
+    }
 }
 @media only screen and (min-width: 900px) {
     main {
@@ -281,6 +283,9 @@ footer button {
         margin-left: 2%;
         margin-right: 2%;
         margin-bottom: 20px;
+    }
+    footer button {
+        font-size: 1.3em;;
     }
 }
 
