--- a/wdd330/pokedex/pokedex.css
+++ b/wdd330/pokedex/pokedex.css
@@ -60,12 +60,14 @@ main {
     border-bottom: white 2px solid;
     display: grid;
     grid-template-columns: 1fr 250px 1fr;
+    min-height: 300px;
 }
 ul {
     grid-column: 2/3;
     list-style: none;
     justify-self: right;
     align-self: center;
+    min-height: 300px;
 }
 
 .card {
@@ -78,8 +80,9 @@ ul {
     height:250px;
     width: 250px;
     font-weight: 600;
-    justify-content: center;
+    justify-self: center;
     align-self: center;
+    margin-bottom: 10px;
     
 }
 .card .typeOne {
@@ -193,7 +196,7 @@ ul {
     grid-column: 2/3;
     grid-row: 1/3;
     z-index: 1;
-    padding-top: 20px;
+    padding-top: 30px;
     text-shadow: black  2px 2px;
     width: 150px;
     font-size: .8em;
@@ -205,7 +208,7 @@ ul {
 }
 .card .leave {
     grid-column: 2/5;
-    grid-row: 4/6;
+    grid-row: 3/6;
     justify-self: center;
 }
 footer {
@@ -231,6 +234,10 @@ footer button {
     border: 1px white solid;
     padding: 20px;
 }
+footer button:hover {
+    color: crimson;
+    border: crimson 1px solid;
+}
 #prev {
     margin-right: 15%;
     padding-right: 40px;
@@ -240,6 +247,10 @@ footer button {
     margin-left: 15%;
     padding-right: 40px;
     padding-left: 40px;
+}
+button:hover {
+    color: crimson;
+    border: crimson 1px solid;
 }
 @media only screen and (min-width: 600px) {
     main {
@@ -266,6 +277,7 @@ footer button {
     } 
     footer button {
         font-size: 1em;;
+        
     }
 }
 @media only screen and (min-width: 900px) {
@@ -274,8 +286,11 @@ footer button {
     }
     ul {
         grid-column: 1/4;
-        columns: 3;
+        display: grid;
+        grid-template-rows: repeat(4, min-content);
+        grid-auto-flow: column;
     }
+    
     footer {
         padding: 30px;
     }
@@ -285,7 +300,7 @@ footer button {
         margin-bottom: 20px;
     }
     footer button {
-        font-size: 1.3em;;
+        font-size: 1.3em;
     }
 }
 
