--- a/wdd330/pokedex/pokedex.css
+++ b/wdd330/pokedex/pokedex.css
@@ -259,6 +259,9 @@ button:hover {
     ul {
         grid-column: 1/3;
         columns: 2;
+        display: grid;
+        grid-template-rows: repeat(6, min-content);
+        grid-auto-flow: column;
     }
     .card {
         margin: auto;
